--- a/app/templates/navbar/navbar.html
+++ b/app/templates/navbar/navbar.html
@@ -2,50 +2,67 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Navbar</title>
-    <link rel="stylesheet" href="../../static/style/navbar.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>{% block title %}Survey Steam{% endblock %}</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 </head>
-<body>
-<!-- Nav bar -->
-<div class="container">
-    <nav class="navbar navbar-expand-sm  navbar-dark fixed-top">
-        <div class="container-fluid justify-content-center">
-            <a class="navbar-brand" href="intro.html"><img src="SurveyStream.jpg" alt="SurveyStream" style="width:40px;" class="rounded-pill"></a>
-            <a href="intro.html" class="webname " style="margin: 0; padding: 0; display: inline;">Survey Stream</a>
-            <button class="navbar-toggler bg-success text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive">Menu</button>
-            <div class="collapse navbar-collapse justify-content-center" id="navbarResponsive">
-                <ul class="navbar-nav coll" id="collapsibleNavbar">
-                    <li class="nav-item"><a class="nav-link text-black" href="Mysurveys.html">My Surveys</a></li>
-                    <li class="nav-item"><a class="nav-link text-black" href="OtherSurveys.html">Other Surveys</a></li>
-                    <li class="nav-item"><a class="nav-link text-black" href="Leaderboard.html">Leaderboard</a></li>
-                    <li class="nav-item"><a class="nav-link text-black" href="AboutUs.html">About Us</a></li>
+<header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="index"><img src="../../static/img/logo.png" alt="" width="30" height="30" class="d-inline-block align-text-top me-2">Survay Stream</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav justify-content-center me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="{{ url_for('survey_dashboard') }}">Surveys</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('create_survey') }}">Create Survey</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Leaderboard</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About us</a>
+                    </li>
                 </ul>
-            </div>
-            <div class="auth-links">
-                <a href="login.html" class="log-in">Log In</a>
-                <a href="signup.html" class="sign-up-free">Sign Up Free</a>
+
+                {% if current_user.is_authenticated %}
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item dropdown">
+                            <a class="btn btn-outline-success dropdown-toggle me-lg-2 mb-2 mb-lg-0 d-block d-lg-inline-block w-100 w-lg-auto text-center" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" >Hello, {{ current_user.username }}</a>
+                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="#">My Surveys</a></li>
+                                <li><a class="dropdown-item" href="#">My Account</a></li>
+                                <li><a class="dropdown-item" href="{{ url_for('logout') }}">Log Out</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                {% else %}
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="btn btn-outline-success me-lg-2 mb-2 mb-lg-0 d-block d-lg-inline-block w-100 w-lg-auto text-center" href="login">Log In</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="btn btn-outline-success ms-lg-2 d-block d-lg-inline-block w-100 w-lg-auto text-center" href="register">Sign Up</a>
+                        </li>
+                    </ul>
+                {% endif %}
             </div>
         </div>
-    </nav> 
-</div>
-<!-- End of Nav bar -->
-<!-- Footer -->
-<footer>
-    <div class="footer-content">
-        <div class="footer-links">
-            <a href="#">Home</a>
-            <a href="#">Services</a>
-            <a href="#">About</a>
-            <a href="#">Terms</a>
-            <a href="#">Privacy Policy</a>
-        </div>
-        <p class="footer-bottom-text">  Copyright © 2024--Survey Stream All Right Reserved </p>
-    </div>
-</footer>
-<!-- End of Footer -->
-    <script src="navbar.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> 
+    </nav>
+</header>
+
+
+<body style="padding-top: 56px;">
+    {% block content %}{% endblock %}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
