--- a/app/templates/survey/survey_dashboard.html
+++ b/app/templates/survey/survey_dashboard.html
@@ -1,22 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Bootstrap Search and Filter Example</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-
-</head>
-<body>
-
-<div class="container mt-5">
+{% extends "navbar/navbar.html" %}
+{% block content %}
+<div class="container mt-3">
     <!-- Search Bar -->
     <div class="mb-3">
         <input type="text" class="form-control form-control-lg" id="searchInput" onkeyup="searchItems()" placeholder="Search for suvey title..." aria-label="Search">
     </div>
     <div id="filter-options" class="container">
-        <h4>Filter by Type</h4>
         <div class="row row-cols-2 row-cols-md-4 g-2">
             <div class="col">
                 <input type="checkbox" class="btn-check filter-type" id="btn-check-education" autocomplete="off" value="education">
@@ -130,7 +119,4 @@
         input.addEventListener('change', displaySurveys); // Update display on filter change
     });
 </script>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-</html>
+{% endblock %}
