--- a/app/static/style/aboutus.css
+++ b/app/static/style/aboutus.css
@@ -1,83 +1,102 @@
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap');
+
 body, h1, h2, h3, p {
     margin: 0;
     padding: 0;
     font-family: 'Arial', sans-serif;
-  }
-  
-  body {
+}
+
+h1, h3 {
+    font-family: 'Orbitron', sans-serif;
+}
+
+body {
     background-color: #f8f9fa;
     color: #333;
-  }
-  
-  .content {
+}
+
+.content {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 20px;
     text-align: center;
-  }
-  
-  .grid {
+}
+
+.grid {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     width: 100%;
-  }
-  
-  .card {
+}
+
+.card {
     display: flex;
     background: white;
     border: 1px solid #ddd;
     border-radius: 20px;
     margin: 10px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    flex-basis: 100%;
-    align-items: center;
+    width: 90%; /* Adapted for responsiveness */
+    flex-direction: row; /* Horizontal layout */
     justify-content: space-between;
-  }
-  
-  .card img {
-    width: 40%;
+    align-items: center;
+}
+
+.card.flex-row-reverse {
+    flex-direction: row-reverse; /* Reverse row for image on the right */
+}
+
+.card-img {
+    width: 30%; /* Increased width by 10% */
     height: auto;
     object-fit: cover;
     margin: 10px;
     border-radius: 8px;
-  }
-  
-  .card-content {
+}
+
+.card-content {
     padding: 20px;
     flex: 1;
-  }
-  
-  .accordion {
-    background-color: #eee;
+    text-align: justify; /* Ensure text justification */
+}
+
+.card-content h3 {
+    text-align: center;
+}
+
+.accordion {
+    background-color: transparent;
     color: #444;
     cursor: pointer;
-    padding: 18px;
+    padding: 10px 18px; /* Adjusted padding for narrower buttons */
     width: 100%;
     border: none;
-    text-align: left;
+    text-align: center;
     outline: none;
     font-size: 15px;
     transition: background-color 0.2s ease-out;
     border-radius: 15px;
-  }
-  
-  .accordion.active {
-    background-color: #ccc;
-  }
-  
-  .accordion:hover, .accordion:focus {
-    background-color: lightgray;
-  }
-  
-  .panel {
+}
+
+.accordion:hover {
+    background-color: #e9ecef;
+}
+
+.panel {
+    background-color: transparent;
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.2s ease-out;
-  }
-  
-  .email-button {
+    padding: 0 18px;
+}
+
+.email-button-container {
+    display: flex;
+    justify-content: center;
+}
+
+.email-button {
     background-color: gray;
     color: white;
     border: none;
@@ -90,17 +109,8 @@ body, h1, h2, h3, p {
     cursor: pointer;
     border-radius: 22px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  }
-  
-  .email-button:hover {
+}
+
+.email-button:hover {
     background-color: lightgray;
-  }
-  
-  h1, h2, h3, p {
-    text-align: justify;
-  }
-  
-  .card-content h3 {
-    text-align: center;
-  }
-  
+}
