--- a/app/static/style/intro.css
+++ b/app/static/style/intro.css
@@ -1,131 +1,98 @@
-body, html {
-    height: 100%;
+:root {
+    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    line-height: 1.5;
+    font-weight: 400;
+    color: black;
+    background-color: whitesmoke;
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+body {
     margin: 0;
-    font-family: Arial, sans-serif;
-}
-
-.main-header {
-    text-align: center;
-    padding-top: 100px;
-}
-
-.main-header h1 {
-    font-size: 3em;
-    color: #024025;
-}
-
-.button {
-    margin-top: 20px;
-    padding: 10px 20px;
-    background-color: #00bf6f;
-    color: white;
-    border: none;
-    border-radius: 20px;
-    cursor: pointer;
-    font-weight: bold; 
-    font-size: 16px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.2); 
-    transition: background-color 0.3s, box-shadow 0.3s;  
-}
-
-.main-content {
     display: flex;
-    justify-content: space-around;
-    margin-top: 50px;
+    place-items: center;
+    min-width: 320px;
+    min-height: 100vh;
 }
-
-.content-item {
+  
+.bouncing-blob {
+    width: 32vw;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    will-change: transform;
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    transform-origin: left top;
+}
+.bouncing-blob--blue { background: #4783c7; }
+.bouncing-blob--purple { background: #8c8ff1; }
+.bouncing-blob--pink { background: #e289cd50; }
+.bouncing-blobs-container {
+    position: fixed;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+.bouncing-blobs-glass {
+    position: absolute;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(140px);
+    -webkit-backdrop-filter: blur(140px);
+    pointer-events: none;
+}
+.hero {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+.hero h2 {
+    font-size: 70px;
+    max-width: 800px;
+    line-height: 1;
     text-align: center;
+    font-weight: bold;
+    text-transform: capitalize;
+    margin-bottom: 20px;
+    color: #021123;
 }
-
-.survey-section {
+.hero p {
+    font-size: 24px;
+    max-width: 500px;
     text-align: center;
-    padding: 40px;
-    background: #f0f0f0; /* or any background color you prefer */
+    color: #021123;
 }
-
-.survey-cards {
+.tutorial-link {
+    bottom: 20px;
+    width: 100%;
     display: flex;
     justify-content: center;
-    gap: 20px; 
 }
 
-.for {
-    flex-basis: calc(33.333% - 20px); /* subtracting the gap from the width */
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    padding: 20px;
-    background: #fff; /* white background for cards */
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1); /* subtle shadow for cards */
+.tutorial-link a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: black;
+    font-size: 20px;
+    text-decoration: none;
+    font-weight: 600;
+    gap: 0 5px;
+    border: 2px solid;
+    border-radius: 5px;
+    padding: 4px 10px;
 }
-
-.for img {
-    max-width: 100%; /* make sure the image fits the card */
-    height: auto;
-}
-
-.for-title {
-    font-size: 1.5em;
-    color: #333; /* title color */
-    margin: 20px 0; /* space between image and title */
-}
-
-.for-text {
-    font-size: 1em;
-    color: #666; /* text color */
-}
-
-.steps-container { 
-    text-align: center;
-    margin-top: 20px;
-}
-
-.button-container {
-    margin-bottom: 10px;
-}
-
-.button {
-    padding: 10px 20px;
-    margin: 0 5px;
-    cursor: pointer;
-}
-
-/* get started */
-.get-started {
-    background: #f0f0f0;
-    padding: 50px 20px; /* Adjust padding to your preference */
-    text-align: center; /* Centers the text */
-    font-family: Arial, sans-serif; /* Specifies font */
-}
-
-.get-started .content {
-    max-width: 800px; /* Limits the width of the content */
-    margin: 0 auto; /* Centers the content block horizontally */
-}
-
-.get-started h2 {
-    color: #024025; /* Dark green color for the title */
-    margin-bottom: 20px; /* Spacing below the title */
-}
-
-.get-started p {
-    color: #333; /* Dark grey color for the text */
-    margin-bottom: 30px; /* Spacing below the paragraph */
-}
-
-.get-started button {
-    background-color: #4CAF50; /* Green background */
-    color: white; /* White text */
-    border: none; /* No border */
-    border-radius: 5px; /* Rounded corners */
-    padding: 15px 30px; /* Padding inside the button */
-    font-size: 16px; /* Font size of the button text */
-    cursor: pointer; /* Pointer cursor on hover */
-    transition: background-color 0.3s; /* Smooth transition for hover effect */
-}
-
-.get-started button:hover {
-    background-color: #45a045; /* Slightly darker green on hover */
-}
+.tutorial-link svg { width: 30px; }
 
   
