--- a/app/templates/navbar/navSidebar.html
+++ b/app/templates/navbar/navSidebar.html
@@ -20,37 +20,37 @@
                     <i class="lni lni-grid-alt"></i>
                 </button>
                 <div class="sidebar-logo">
-                    <a href="#">Survey Stream</a>
+                    <a href="{{ url_for('index') }}">Survey Stream</a>
                 </div>
             </div>
             <ul class="sidebar-nav">
                 <li class="sidebar-item">
-                    <a href="#" class="sidebar-link">
+                    <a href="{{url_for('update_profile', user_id=current_user.id)}}" class="sidebar-link">
                         <i class="lni lni-user"></i>
                         <span>Profile</span>
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="#" class="sidebar-link">
+                    <a href="{{ url_for('my_survey', user_id = current_user.id) }}" class="sidebar-link">
                         <i class="lni lni-agenda"></i>
                         <span>My Survey</span>
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="#" class="sidebar-link">
+                    <a href="{{url_for('create_survey')}}" class="sidebar-link">
                         <i class="lni lni-support"></i>
                         <span>Create Survey</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="sidebar-link">
+                    <a href="{{url_for('change_password', user_id=current_user.id)}}" class="sidebar-link">
                         <i class="lni lni-key"></i>
                         <span>Change Password</span>
                     </a>
                 </li>
             </ul>
             <div class="sidebar-footer">
-                <a href="#" class="sidebar-link">
+                <a href="{{url_for('logout')}}" class="sidebar-link">
                     <i class="lni lni-exit"></i>
                     <span>Logout</span>
                 </a>
@@ -58,7 +58,7 @@
         </aside>
 
         <div class="main p-3">
-            <div class="text-center">
+            <div class="container">
                 <div class="mb-3">
                     {% with messages = get_flashed_messages(with_categories=true) %}
                     {% if messages %}
