--- a/app/templates/survey/update_profile.html
+++ b/app/templates/survey/update_profile.html
@@ -1,59 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Account</title>
-</head>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+{% extends 'navbar/navSidebar.html' %}
+{% block content %}
 <style>
     body, html {
         height: 100%;
         margin: 0;
         font-family: Arial, Helvetica, neue, sans-serif;
     }
-    .sidebar {
-        height: 100%;
-        width: 240px;
-        position: fixed;
-        z-index: 1;
-        top: 0;
-        left: 0;
-        background-color: #f8f9fa;
-        overflow-x: hidden;
-        padding-top: 20px;
-        box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-        border-right: 1px solid #dee2e6;
-    }
-    .sidebar a {
-        padding: 12px 16px;
-        text-decoration: none;
-        font-size: 18px;
-        color: #333;
-        display: flex;
-        align-items: center;
-        border-radius: 4px;
-        transition: background-color 0.3s, color 0.3s;
-        margin-bottom:8px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
-    }
-    .sidebar a:hover {
-        background-color: #e9ecef;
-        color: #0056b3;
-    }
-    .sidebar a.active {
-        background-color: #0056b3;
-        color: #fff;
-    }
     .container {
         background-color: #f8f9fa;
         border-radius: 10px;
         box-shadow: 0 2px 5px rgba(0,0,0,0.1);
         text-align: center;
-        margin-left: 260px;
         padding: 20px;
-        margin-top: 50px;
         transition: margin-left 0.3s;
         width: calc(100% - 280px); 
     }
@@ -81,37 +39,15 @@
         margin-bottom: 10px;
         font-weight: bold;
     }
-    .btn-primary {
-        background-color: #1f8a43;
-        color: white;
-        padding: 10px 20px;
-        border: none;
-        border-radius: 5px;
-        font-size: 16px;
-        transition: background-color 0.3s;
-        margin-top: 40px;
-    }
-    .btn-primary:hover {
-        background-color: #155c2f;
-    }
 
 </style>
 <body>
-
-    <div class="sidebar bg-light">
-        <a href="mySurveys.html"><i class="bi bi-journal-text icon"></i>My Surveys</a>
-        <a href="myAccount.html"><i class="bi bi-heart icon"></i>My Account</a>
-        <a href="Setting.html"><i class="bi bi-gear icon"></i>Setting</a>
-    </div>
 
     <div class="container mt-5 d-flex justify-content-center align-items-center">
         <form method="POST" action="" enctype="multipart/form-data" class="profile-form">
             {{ form.hidden_tag() }}
             <div class="col-md-16">
                 <img id="profilePreview" src="{{ url_for('static', filename=profile_url) }}" alt="profile_pic" class="profileimg">
-                <!-- waiting for be changed by tony -->
-                <div id="displayName" class="form-label">SurveyStreamUser001</div>
-                <!-- end of coding be changed by tony  -->
             </div>
             <div class="col-md-16">
                     {{ form.profile_pic.label(class="form-label") }}<br>
@@ -125,14 +61,13 @@
                     {{ form.username(class="form-control") }}
                     <!-- waiting for be changed by tony -->
                     <label for="email" class="form-label"><strong>Email</strong></label>
-                    <input type="email" class="form-control readonly-input" id="email" placeholder="Email" readonly>
+                    <input type="email" class="form-control readonly-input" id="email" placeholder="{{ current_user.email }}" readonly>
                     <label for="points" class="form-label"><strong>Points</strong></label>
-                    <input type="text" class="form-control readonly-input" id="points" placeholder="Points" readonly>
+                    <input type="text" class="form-control readonly-input" id="points" placeholder="{{ 'current_user.point' }}" readonly>
                     <!-- end of coding be changed by tony  -->
-                    {{ form.submit(class="btn btn-primary") }}
+                    {{ form.submit(class="btn btn-success mt-3") }}
             </div>
         </form>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-</html>
+{% endblock %}
