--- a/app/templates/Intro.html
+++ b/app/templates/Intro.html
@@ -22,7 +22,7 @@
     <h2>Survey Stream <br>Survey the World</h2>
     <p>Shape the Future with Every Survey</p>
     <div class="tutorial-link">
-      <a href="#" target="_blank" rel="noopener noreferer">
+      <a href="./survey/take_survey.html" target="_blank" rel="noopener noreferer">
         Start For Free<i class="bi bi-arrow-right-circle-fill"></i>
       </a>
     </div>
