--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,10 +1,36 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>
             {{ title }}
         </title>
+        <link rel="stylesheet" href="../static/style/intro.css">
     </head>
     <body>
-        <p> Hello {{ user.username }}, your DoB is {{ user.DoB }}</p>
+        <!-- <p> Hello {{ user.username }}, your DoB is {{ user.DoB }}</p> -->
+        <div class="bouncing-blobs-container">
+            <div class="bouncing-blobs-glass"></div>
+            <div class="bouncing-blobs">
+              <div class="bouncing-blob bouncing-blob--blue"></div>
+              <div class="bouncing-blob bouncing-blob--blue"></div>
+              <div class="bouncing-blob bouncing-blob--blue"></div>
+              <div class="bouncing-blob bouncing-blob--purple"></div>
+              <div class="bouncing-blob bouncing-blob--purple"></div>
+              <div class="bouncing-blob bouncing-blob--pink"></div>
+            </div>
+          </div>
+          <div class="hero">
+            <h2>Survey Stream <br>Survey the World</h2>
+            <p>Shape the Future with Every Survey</p>
+            <div class="tutorial-link">
+              <a href="./survey/MySurveys.html" target="_blank" rel="noopener noreferer">
+                Start For Free<i class="bi bi-arrow-right-circle-fill"></i>
+              </a>
+            </div>
+          </div>
+        
+        <script src="../static/js/intro.js"></script>
     </body>
 </html>
