--- a/app/static/style/aboutus.css
+++ b/app/static/style/aboutus.css
@@ -7,7 +7,7 @@ body, h1, h2, h3, p {
 }
 
 h1, h3 {
-    font-family: 'Orbitron', sans-serif;
+    font-family: 'Arial', sans-serif;
 }
 
 body {
@@ -33,22 +33,22 @@ body {
 .card {
     display: flex;
     background: white;
-    border: 1px solid #ddd;
+    border: none;
     border-radius: 20px;
     margin: 10px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    width: 90%; /* Adapted for responsiveness */
-    flex-direction: row; /* Horizontal layout */
+    box-shadow: none;
+    width: 90%;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
 }
 
 .card.flex-row-reverse {
-    flex-direction: row-reverse; /* Reverse row for image on the right */
+    flex-direction: row-reverse;
 }
 
 .card-img {
-    width: 30%; /* Increased width by 10% */
+    width: 30%;
     height: auto;
     object-fit: cover;
     margin: 10px;
@@ -58,10 +58,14 @@ body {
 .card-content {
     padding: 20px;
     flex: 1;
-    text-align: justify; /* Ensure text justification */
+    text-align: justify;
 }
 
 .card-content h3 {
+    text-align: center;
+}
+
+.card-content.center {
     text-align: center;
 }
 
@@ -69,7 +73,7 @@ body {
     background-color: transparent;
     color: #444;
     cursor: pointer;
-    padding: 10px 18px; /* Adjusted padding for narrower buttons */
+    padding: 10px 18px;
     width: 100%;
     border: none;
     text-align: center;
