--- a/app/templates/aboutus.html
+++ b/app/templates/aboutus.html
@@ -15,35 +15,26 @@
     <div class="card flex-row">
         <img src="https://res.cloudinary.com/dynbwiv3t/image/upload/v1714477459/declan-sun-vJF-hGYyFho-unsplash_ajcars.jpg" alt="Our Goal Image" class="card-img">
         <div class="card-content">
-            <h3>Our Goal</h3>
-            <p>At our polls and surveys website, our primary objective is to revolutionize the way data is collected and shared. We strive to create a dynamic platform where users can actively engage in the process of gathering valuable insights and information.</p>
-            <!-- Accordion sections -->
-            <button class="accordion">Empowering Users</button>
-            <div class="panel">
-                <p>We aim to empower users by providing them with the tools and resources needed to create, share, and analyze polls and surveys effortlessly. Through intuitive interfaces and seamless functionality, we encourage users to unleash their creativity and curiosity to address diverse topics and questions.</p>
-            </div>
-            <button class="accordion">Facilitating Collaboration</button>
-            <div class="panel">
-                <p>Our goal is to foster a collaborative environment where users can connect, collaborate, and learn from one another. By offering a comprehensive dashboard filled with a myriad of polls and surveys contributed by fellow users, we facilitate knowledge exchange and community-driven exploration.</p>
-            </div>
-            <button class="accordion">Promoting Transparency</button>
-            <div class="panel">
-                <p>Transparency is at the core of our mission. We believe in the importance of sharing survey and poll results openly and transparently. Through our platform, users can not only collect data but also share and visualize the results in a clear and comprehensible manner, fostering transparency and accountability.</p>
-            </div>
-            <!-- End of accordion sections -->
+            <h3>Our Purpose</h3>
+            <p>
+                Our website allows users to create, share, and participate in surveys, supporting needs like academic research, market analysis, customer feedback, and personal interests. This dual functionality fosters a dynamic community where users gather insights and share knowledge.
+                <br><br>
+                Our goal is to facilitate meaningful interactions and data collection, helping users understand various topics and trends. Whether you're a researcher, business, or individual, our website provides the tools to create impactful surveys. By participating in surveys, users contribute to a collaborative environment, sharing diverse perspectives and expanding collective knowledge.</p>
         </div>
     </div>  
     <!-- Card 2 - Our Story -->
     <div class="card flex-row-reverse">
         <img src="https://res.cloudinary.com/dynbwiv3t/image/upload/v1714477445/christina-wocintechchat-com-03hBSIiFikE-unsplash_gmg2ha.jpg" alt="Our Story Image" class="card-img">
         <div class="card-content">
-            <h3>Our Story</h3>
-            <p>As a team of four dedicated students, we embarked on this project with a singular vision: to create a platform that not only facilitates easy and efficient data collection but also fosters an environment where shared insights pave the way for collective intelligence. Our website ensures a tailored approach that aligns with our specific academic insights and technical skills.</p>
+            <h3>Our Context</h3>
+            <p>In today's digital age, gathering insights and feedback is crucial for growth. Our website offers a user-friendly platform for creating, sharing, and responding to surveys. Whether you're seeking opinions, conducting research, or collecting customer feedback, our tools make designing and distributing surveys easy and efficient.
+                <br><br>Our platform is invaluable for collecting meaningful data, understanding trends, and making informed decisions. By participating in surveys, users contribute to the community's knowledge base and gain insights. This collaborative approach helps identify patterns and supports continuous learning and growth in both personal and professional spheres.
+            </p>
         </div>
     </div>
     <!-- Card 3 - Contact Us -->
     <div class="card">
-        <div class="card-content">
+        <div class="card-content center">
             <h3>Contact Us</h3>
             <p>If you encounter any problems, you can contact us through the following ways and we will help you solve them as soon as possible.</p>
             <!-- Add button -->
