--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -24,7 +24,7 @@
         <h2>Survey Stream <br>Survey the World</h2>
         <p>Shape the Future with Every Survey</p>
         <div class="tutorial-link">
-          <a href="./survey/MySurveys.html" target="_blank" rel="noopener noreferer">
+          <a href="{{url_for('register')}}" rel="noopener noreferer">
             Start For Free<i class="bi bi-arrow-right-circle-fill"></i>
           </a>
         </div>
