--- a/app/templates/survey/create_survey.html
+++ b/app/templates/survey/create_survey.html
@@ -1,14 +1,6 @@
-<!-- By Tony -->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Create Survey</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-<body>
+{% extends 'navbar/navSidebar.html' %}
+{% block extra_js %}<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>{% endblock %}
+    {% block content %}
     <div class="container mt-4">
         <div class="card">
             <div class="card-body">
@@ -28,8 +20,8 @@
                         {{ form.description(class="form-control") }}
                     </div>
                     <div id="questionsContainer"></div>
-                    <button type="button" onclick="addQuestion()">Add Question</button>
-                    <p>{{ form.submit(class="btn") }}</p>
+                    <button class="btn btn-outline-success mt-3" type="button" onclick="addQuestion()">Add Question</button>
+                    <p class="mt-3">{{ form.submit(class="btn btn-outline-primary") }}</p>
                 </form>
             </div>
         </div>
@@ -43,7 +35,7 @@
                                 <label class="form-label" for="question${questionId}"><strong>Question${questionId}</strong></label>
                                 <input class="form-control" type="text" name="question${questionId}" placeholder="Enter your question">
                                 <div class="optionsContainer" id="optionsContainer${questionId}"></div>
-                                <div class="btn-group">
+                                <div class="btn-group mt-3">
                                     <button class="btn btn-success" type="button" onclick="addOption(${questionId})">Add Option</button>
                                     <button class="btn btn-danger" type="button" id="removeLastOption${questionId}" onclick="removeLastOption(${questionId})" disabled>Remove Last Option</button>
                                     <button class="btn btn-danger" type="button" onclick="removeQuestion(${questionId})">Remove Question</button>
@@ -157,6 +149,5 @@
                 }
             });
         </script>
-    </body>
-    </html>
+        {% endblock %}
     
